# simple-ticketing-service

./: .dockerignore  .gitignore  BACKLOG.md  CHANGELOG.org  CLAUDE.md  README.md  README.org  dev.sh  docker-compose.yml  flake.nix  user-experience.org
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3b4bc7543f8a_add_discord_refresh_token_and_discord_.py  3fb33cb23349_initial_schema.py  412b94f26771_add_queue_invites.py  69ab48e8b4e4_add_is_bot_to_users_and_bot_user_id_to_.py  72aa7490e369_add_comment_updated_at.py  82e2293d1786_add_on_behalf_of_to_tickets_and_comments.py  93dd70933afc_add_api_keys_table.py  a1b2c3d4e5f6_add_ticket_events_table.py  a3abdaa5eb90_add_notification_tables.py  b265b6b652b6_add_cascade_deletes_to_foreign_keys.py  c8f1a2d3e4b5_replace_pageable_hours_with_schedule.py  e7da6b1f5f49_add_claude_bot_user.py  f4a8c2d7e9b1_add_notifications_table_for_feed.py
backend/app/: auth.py  config.py  database.py  fcm.py  logging_config.py  main.py  metrics.py  middleware.py  migrate.py  models.py  notifications.py  scheduler.py  schemas.py  seed.py
backend/app/discord_bot/: __init__.py  bot.py  cog.py  helpers.py  views.py
backend/app/routers/: api_keys.py  auth.py  categories.py  comments.py  devices.py  invites.py  notifications.py  performance.py  queues.py  settings.py  tickets.py  users.py
backend/tests/: conftest.py  factories.py  test_auth.py  test_models.py  test_notifications.py  test_scheduler.py
backend/tests/routers/: test_api_keys.py  test_auth_router.py  (+12 more)
(+213 files in other folders)
