[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "fastapi>=0.128.5",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
    "slowapi>=0.1.9",
    "firebase-admin>=6.6.0",
    "APScheduler>=3.10.4",
    "discord.py>=2.4.0",
    "prometheus-client>=0.21.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.10"]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.1",
    "pytest-cov>=6.0",
    "factory-boy>=3.3",
    "freezegun>=1.4",
    "psycopg2-binary>=2.9.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
